[package]
name = "cashu-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.0"
bitcoin = { version = "0.30.0", features = ["rand", "serde"] }
hex = "0.4.3"
rand = { version = "0.8.5",  features = ["std"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
sha2 = "0.10.8"
thiserror = "1.0.58"
